Fix flickering

--- a/user/themes/happykemper/assets/styles/modules/_glide.scss
+++ b/user/themes/happykemper/assets/styles/modules/_glide.scss
@@ -10,4 +10,8 @@
 .glide__slide {
     perspective: 2000;
     backface-visibility: hidden;
+
+    &--active {
+        z-index: 1;
+    }
 }
